[package]
name = "yaml-merge-keys"
version = "0.2.1"
authors = ["Ben Boeckel <ben.boeckel@kitware.com>"]
license = "MIT/Apache-2.0"
description = """
Implementation of the YAML merge key extension.

http://yaml.org/type/merge.html
"""
repository = "https://gitlab.kitware.com/utils/rust-yaml-merge-keys"
documentation = "https://docs.rs/yaml-merge-keys/~0.2"
readme = "README.md"
keywords = ["yaml"]

[dependencies]
itertools = "~0.7"
lazy_static = "~0.2"

error-chain = ">= 0.9, < 0.11"
serde_yaml = { version = "~0.7", optional = true }
yaml-rust = "~0.3"

[package.metadata.docs.rs]
features = [ "serde_yaml" ]
