[package]
name = "yaml-merge-keys"
version = "0.4.1"
authors = ["Ben Boeckel <ben.boeckel@kitware.com>"]
license = "MIT/Apache-2.0"
description = """
Implementation of the YAML merge key extension.

http://yaml.org/type/merge.html
"""
repository = "https://gitlab.kitware.com/utils/rust-yaml-merge-keys"
documentation = "https://docs.rs/yaml-merge-keys/~0.4"
readme = "README.md"
keywords = ["yaml"]
edition = "2018"

[dependencies]
lazy_static = "^1.1"
thiserror = "^1.0"

serde_yaml = { version = "~0.8.4", optional = true }
yaml-rust = "~0.4.5"

[package.metadata.docs.rs]
features = [ "serde_yaml" ]
